[package]
name = "kvass"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = { version = "0.3.12", default-features = false, features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
yamux = "0.10.2"
clap = {version = "3", features = ["derive"]}